@@ -1,18 +1,16 @@
 package net.kapitencraft.scripted.lang.compiler.parser;
 
 import net.kapitencraft.scripted.lang.compiler.Compiler;
-import net.kapitencraft.scripted.lang.compiler.Holder;
-import net.kapitencraft.scripted.lang.compiler.VarTypeParser;
-import net.kapitencraft.scripted.lang.compiler.analyser.BytecodeVars;
 import net.kapitencraft.scripted.lang.compiler.analyser.LocationAnalyser;
-import net.kapitencraft.scripted.lang.compiler.analyser.RetTypeAnalyser;
 import net.kapitencraft.scripted.lang.exe.VarTypeManager;
-import net.kapitencraft.scripted.lang.holder.ast.Expr;
 import net.kapitencraft.scripted.lang.holder.class_ref.ClassReference;
-import net.kapitencraft.scripted.lang.holder.class_ref.SourceClassReference;
+import net.kapitencraft.scripted.lang.holder.class_ref.SourceReference;
 import net.kapitencraft.scripted.lang.holder.class_ref.generic.AppliedGenericsReference;
-import net.kapitencraft.scripted.lang.holder.class_ref.generic.GenericClassReference;
+import net.kapitencraft.scripted.lang.holder.class_ref.generic.AppliedGenericsSourceReference;
 import net.kapitencraft.scripted.lang.holder.class_ref.generic.GenericStack;
+import net.kapitencraft.scripted.lang.holder.oop.generic.AppliedGenerics;
+import net.kapitencraft.scripted.lang.holder.oop.generic.Generic;
+import net.kapitencraft.scripted.lang.holder.oop.generic.Generics;
 import net.kapitencraft.scripted.lang.holder.token.Token;
 import net.kapitencraft.scripted.lang.holder.token.TokenType;
 import net.kapitencraft.scripted.lang.holder.token.TokenTypeCategory;
@@ -24,9 +22,8 @@ import java.util.*;
 
 import static net.kapitencraft.scripted.lang.holder.token.TokenType.*;
 
-@SuppressWarnings({"ThrowableNotThrown", "UnusedReturnValue"})
+@SuppressWarnings({"UnusedReturnValue"})
 public class AbstractParser {
-    protected static final ClassReference WILDCARD = new GenericClassReference("", null, null);
 
     private static final Map<TokenTypeCategory, TokenType[]> categoryLookup = createCategoryLookup();
 
@@ -40,123 +37,22 @@ public class AbstractParser {
 
     protected int current;
     protected Token[] tokens;
-    protected VarTypeParser parser;
-    protected RetTypeAnalyser finder;
+    protected VarTypeContainer parser;
     protected final LocationAnalyser locFinder = new LocationAnalyser();
-    protected final Deque<Set<ClassReference>> args = new ArrayDeque<>();
     protected final Compiler.ErrorStorage errorStorage;
-    protected BytecodeVars varAnalyser;
-
-    protected ClassReference checkVarExistence(Token name, boolean requireValue, boolean mayBeFinal) {
-        String varName = name.lexeme();
-        BytecodeVars.FetchResult result = varAnalyser.get(varName);
-        if (result == BytecodeVars.FetchResult.FAIL) {
-            error(name, "cannot find symbol");
-        } else if (requireValue && !result.assigned()) {
-            error(name, "Variable '" + name.lexeme() + "' might not have been initialized");
-        } else if (!mayBeFinal && !result.canAssign()) {
-            error(name, "Can not assign to final variable");
-        }
-        return result.type();
-    }
-
-    protected void checkVarType(Token name, Expr value) {
-        BytecodeVars.FetchResult result = varAnalyser.get(name.lexeme());
-        if (result == BytecodeVars.FetchResult.FAIL) return;
-        expectType(name, value, result.type());
-    }
-
-    protected void expectType(ClassReference... types) {
-        args.push(Set.of(types));
-    }
-
-    protected void popExpectation() {
-        args.pop();
-    }
-
-    protected boolean typeAllowed(ClassReference target) {
-        return searched().contains(target);
-    }
-
-    protected Set<ClassReference> searched() {
-        return args.getLast();
-    }
-
-    protected void expectType(List<ClassReference> types) {
-        args.push(Set.copyOf(types));
-    }
-
-    protected ClassReference expectType(Token errorLoc, Expr value, ClassReference type) {
-        ClassReference got = finder.findRetType(value);
-        return expectType(errorLoc, got, type);
-    }
-
-    protected ClassReference expectType(Expr value, ClassReference type) {
-        return expectType(this.locFinder.find(value), value, type);
-    }
-
-    protected void expectCondition(Token errorLoc, Expr gotten) {
-        expectType(errorLoc, gotten, VarTypeManager.BOOLEAN.reference());
-    }
-
-    protected void expectCondition(Expr gotten) {
-        expectCondition(locFinder.find(gotten), gotten);
-    }
-
-    protected ClassReference expectType(Token errorLoc, ClassReference gotten, ClassReference expected) {
-        if (gotten == null) return WILDCARD;
-        if (gotten == WILDCARD) return expected;
-        if (expected == VarTypeManager.OBJECT) return gotten;
-        if (!gotten.get().isChildOf(expected.get()))
-            errorStorage.errorF(errorLoc, "incompatible types: %s cannot be converted to %s", gotten.name(), expected.name());
-        if (gotten instanceof AppliedGenericsReference reference) {
-            if (expected instanceof AppliedGenericsReference reference1) {
-                Holder.AppliedGenerics gottenAppliedGenerics = reference.getApplied();
-                Holder.AppliedGenerics expectedAppliedGenerics = reference1.getApplied();
-                ClassReference[] expectedGenerics = expectedAppliedGenerics.references();
-                ClassReference[] gottenGenerics = gottenAppliedGenerics.references();
-
-                if (expectedGenerics.length != gottenGenerics.length) {
-                    errorStorage.errorF(gottenAppliedGenerics.reference(), "Wrong number of type arguments: %s; required: %s", gottenGenerics.length, expectedGenerics.length);
-                } else {
-                    for (int i = 0; i < expectedGenerics.length; i++) {
-                        if (!expectedGenerics[i].get().isChildOf(gottenGenerics[i].get())) {
-                            String name = reference1.getGenerics().variables()[i].name().lexeme();
-                            errorStorage.errorF(reference.getApplied().reference(), "incompatible types: inference variable %s has incompatible bounds", name);
-
-                            errorStorage.logError("gotten: " + gottenGenerics[i].name());
-                            errorStorage.logError("lower bounds: " + expectedGenerics[i].name());
-                        }
-                    }
-                }
-            } else {
-                errorStorage.errorF(reference.getApplied().reference(), "Type '%s' does not have type parameters", expected.absoluteName());
-            }
-        }
-        return gotten;
-    }
-
-    protected byte createVar(Token name, ClassReference type, boolean hasValue, boolean isFinal) {
-        BytecodeVars.FetchResult result = varAnalyser.get(name.lexeme());
-        if (result != BytecodeVars.FetchResult.FAIL) {
-            errorStorage.errorF(name, "Variable '%s' already defined in current scope", name.lexeme());
-        }
-        return varAnalyser.add(name.lexeme(), type, !isFinal, hasValue);
-    }
+    protected boolean panicMode = false;
 
     public AbstractParser(Compiler.ErrorStorage errorStorage) {
         this.errorStorage = errorStorage;
     }
 
-    public void apply(Token[] toParse, VarTypeParser targetAnalyser) {
+    public void apply(Token[] toParse, VarTypeContainer targetAnalyser) {
         this.current = 0;
         this.tokens = toParse;
         this.parser = targetAnalyser;
-        this.varAnalyser = new BytecodeVars();
-        this.finder = new RetTypeAnalyser(varAnalyser);
     }
 
-    protected @Nullable Holder.AppliedGenerics appliedGenerics(GenericStack stack) {
+    protected @Nullable AppliedGenerics appliedGenerics(GenericStack stack) {
         if (match(LESSER)) {
             Token r = previous();
             List<ClassReference> references = new ArrayList<>();
@@ -164,33 +60,33 @@ public class AbstractParser {
                 references.add(consumeVarType(stack).getReference());
             } while (match(COMMA));
             consume(GREATER, "unclosed generic declaration");
-            return new Holder.AppliedGenerics(r, references.toArray(new ClassReference[0]));
+            return new AppliedGenerics(r, references.toArray(new ClassReference[0]));
         }
         return null;
     }
 
-    protected @Nullable Holder.Generics generics(GenericStack genericStack) {
+    protected @Nullable Generics generics(GenericStack genericStack) {
         if (match(LESSER)) {
-            List<Holder.Generic> generics = new ArrayList<>();
+            List<Generic> generics = new ArrayList<>();
             do {
                 generics.add(generic(genericStack));
             } while (match(COMMA));
             consume(GREATER, "unclosed generic declaration");
-            return new Holder.Generics(generics.toArray(new Holder.Generic[0]));
+            return new Generics(generics.toArray(new Generic[0]));
         }
         return null;
     }
 
-    private Holder.Generic generic(GenericStack genericStack) {
+    private Generic generic(GenericStack genericStack) {
         Token name = consumeIdentifier();
-        SourceClassReference lowerBound = null, upperBound = null;
+        SourceReference lowerBound = null, upperBound = null;
         if (match(EXTENDS)) {
             lowerBound = consumeVarType(genericStack);
         } else if (match(SUPER)) {
             upperBound = consumeVarType(genericStack);
         }
 
-        return new Holder.Generic(name, lowerBound, upperBound);
+        return new Generic(name, lowerBound, upperBound);
     }
 
     protected boolean check(TokenType type) {
@@ -242,23 +138,15 @@ public class AbstractParser {
         return tokens[current - 1];
     }
 
-
     protected Token consume(TokenType type, String message) {
         if (check(type)) return advance();
 
         if (isAtEnd()) {
-            throw error(previous().after(), message);
-        } else
-            throw error(peek(), message);
-    }
-
-    protected Token consume(TokenTypeCategory category, String message) {
-        if (check(category)) return advance();
-
-        if (isAtEnd()) {
-            throw error(previous().after(), message);
-        } else
-            throw error(peek(), message);
+            error(previous().after(), message);
+        } else {
+            error(peek(), message);
+        }
+        return Token.createNative("<unidentified>");
     }
 
     protected Token consumeNoThrow(TokenType type, String msg) {
@@ -288,54 +176,66 @@ public class AbstractParser {
             if (peek().type() == increase) i++;
             else if (peek().type() == decrease) i--;
         } while (i > 0 && !isAtEnd());
-        tokens.remove(tokens.size() - 1); //remove last
+        tokens.removeLast();
         return tokens.toArray(Token[]::new);
     }
 
-    protected Optional<SourceClassReference> tryConsumeVarType(GenericStack generics) {
+    protected Optional<SourceReference> tryConsumeVarType(GenericStack generics) {
         Optional<ClassReference> optional = generics.getValue(peek().lexeme());
-        if (optional.isPresent()) return Optional.of(SourceClassReference.from(advance(), optional.get()));
-        if (VarTypeManager.hasPackage(peek().lexeme()) && varAnalyser.get(peek().lexeme()) == BytecodeVars.FetchResult.FAIL) {
-            advance();
-            if (check(DOT)) {
-                current--;
-                return Optional.of(consumeVarType(generics));
+        if (optional.isPresent()) return Optional.of(SourceReference.from(advance(), optional.get()));
+        if (VarTypeManager.hasPackage(peek().lexeme())) {
+            Package p = VarTypeManager.getPackage(peek().lexeme());
+            List<Token> consumed = new ArrayList<>();
+            consumed.add(advance());
+            while (match(DOT)) {
+                Token t = advance();
+                consumed.add(t);
+                if (p.hasClass(t.lexeme())) {
+                    return Optional.of(SourceReference.from(consumed.getFirst(), p.getClass(t.lexeme())));
+                } else if (!p.hasPackage(t.lexeme()))
+                    break; //can not find class here
             }
-            current--;
+            current -= consumed.size() * 2 - 1;
         }
         Token t = advance();
         ClassReference reference = parser.getClass(t.lexeme());
         if (reference != null && !check(DOT)) {
-            Holder.AppliedGenerics declared = appliedGenerics(generics);
+            AppliedGenerics declared = appliedGenerics(generics);
             if (declared != null) reference = new AppliedGenericsReference(reference, declared);
-            return Optional.of(SourceClassReference.from(t, reference));
-        } else
+            return Optional.of(SourceReference.from(t, reference));
+        } else if (reference != null)
+            return Optional.of(SourceReference.from(t, reference));
+        else
             current--;
         return Optional.empty();
     }
 
     @NotNull
-    protected SourceClassReference consumeVarType(GenericStack generics) {
-        SourceClassReference sourceClassReference = consumeVarTypeNoArray(generics);
-        ClassReference reference = sourceClassReference.getReference();
-        Token last = sourceClassReference.getToken();
+    protected SourceReference consumeVarType(GenericStack generics) {
+        SourceReference sourceReference = consumeVarTypeNoArray(generics);
+        ClassReference reference = sourceReference.getReference();
+        Token last = sourceReference.getToken();
+        AppliedGenerics appliedGenerics = appliedGenerics(generics);
+        if (appliedGenerics != null) {
+            return AppliedGenericsSourceReference.create(last, reference, appliedGenerics);
+        }
         while (match(S_BRACKET_O)) {
             consume(S_BRACKET_C, "']' expected");
             reference = reference.array();
             last = previous();
         }
-        if (last != sourceClassReference.getToken()) {
-            return SourceClassReference.from(last, reference);
+        if (last != sourceReference.getToken()) {
+            return SourceReference.from(last, reference);
         }
-        return sourceClassReference;
+        return sourceReference;
     }
 
-    protected SourceClassReference consumeVarTypeNoArray(GenericStack stack) {
+    protected SourceReference consumeVarTypeNoArray(GenericStack stack) {
         Token token = consumeIdentifier();
         ClassReference reference = parser.getClass(token.lexeme());
         if (reference == null) {
             Optional<ClassReference> optional = stack.getValue(token.lexeme());
-            if (optional.isPresent()) return SourceClassReference.from(token, optional.get());
+            if (optional.isPresent()) return SourceReference.from(token, optional.get());
         }
         if (reference == null) {
             Package p = VarTypeManager.getPackage(token.lexeme());
@@ -353,7 +253,7 @@ public class AbstractParser {
         Token last = previous();
         int index = current;
         while (match(DOT) && reference != null) {
-            String enclosingName = consumeIdentifier().lexeme(); //needs to stay here for the mean-time to ensure the compiler doesn't break
+            String enclosingName = consumeIdentifier().lexeme();
             ClassReference name = VarTypeManager.getClassForName(reference.absoluteName() + "." + enclosingName);
             if (name == null) {
                 current = index;
@@ -365,17 +265,11 @@ public class AbstractParser {
 
         if (reference == null) {
             error(token, "unknown symbol");
-            return SourceClassReference.from(token, VarTypeManager.VOID.reference()); //skip rest
+            return SourceReference.from(token, VarTypeManager.VOID.reference()); //skip rest
         }
-        Holder.AppliedGenerics declared = appliedGenerics(stack);
-        if (declared != null) return SourceClassReference.from(last, new AppliedGenericsReference(reference, declared));
-        return SourceClassReference.from(last, reference);
-    }
-
-    //stupid me. namespaces can be used as package names :agony:
-    //i'm sure that won't bite future me in the ...
-    protected Token consumePackageOrClass() {
-        return consume(TokenTypeCategory.PACKAGE_DEF, "<identifier> or <namespace> expected");
+        AppliedGenerics declared = appliedGenerics(stack);
+        if (declared != null) return SourceReference.from(last, new AppliedGenericsReference(reference, declared));
+        return SourceReference.from(last, reference);
     }
 
     protected Token consumeIdentifier() {
@@ -383,11 +277,11 @@ public class AbstractParser {
     }
 
     protected Token consumeBracketOpen(String method) {
-        return this.consume(BRACKET_O, "Expected '(' after '" + method + "'.");
+        return this.consume(BRACKET_O, "Expected '(' after " + method + ".");
     }
 
-    protected Token consumeCurlyOpen(String method) {
-        return this.consume(C_BRACKET_O, "Expected '{' after '" + method + "'.");
+    protected Token consumeCurlyOpen(String obj) {
+        return this.consume(C_BRACKET_O, "Expected '{' after " + obj + ".");
     }
 
     protected Token consumeCurlyClose(String method) {
@@ -402,12 +296,9 @@ public class AbstractParser {
         return this.consumeNoThrow(EOA, "';' expected");
     }
 
-    protected static class ParseError extends RuntimeException {
-    }
-
-    protected ParseError error(Token token, String message) {
-        errorStorage.error(token, message);
-        return new ParseError();
+    protected void error(Token token, String message) {
+        if (!this.panicMode)
+            errorStorage.error(token, message);
     }
 
     protected void warn(Token token, String message) {
